update PropertyUtils to use newer reflection API